refactor: Pattern matching for instance of and String.formatted (#9748)
* refactor: Pattern matching for instance of  and String.formatted

Use this link to re-run the recipe: https://app.moderne.io/recipes/builder/E3weKifbL

Co-authored-by: Moderne <team@moderne.io>

* Fix naming conflicts, checkstyle, and add generics to Maps

---------

Co-authored-by: Moderne <team@moderne.io>